# Aura-Update

./: .gitignore  CHANGELOG.md  INFOS_SMARTSCREEN.txt  LICENSE  LICENSE_EN.txt  LICENSE_FR.txt  PATCH-NOTES-v2.2.7.md  README.md  README_FR.md  UPDATER-SIGNING.md  obfuscate.mjs  package-lock.json  package.json  progress.json  restore.mjs  update-script.ps1
.github/workflows/: build-release.yml  release.yml
Crash Log User/: crash_report.json
_scripts/: build-linux.sh  build-macos.sh  build-windows.ps1
frontend/: index.html
frontend/css/: app.css
frontend/js/: app.js
frontend/locales/: en.json  fr.json
locales/: en.json  fr.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: admin.rs  ai.rs  cleanup.rs  command_runner.rs  config.rs  cooling.rs  health.rs  logging.rs  maintenance.rs  mod.rs  power.rs  processes.rs  remote.rs  scheduler.rs  snapshot.rs  startup.rs  updates.rs
src/backend/: main.ps1
src/frontend/: main.js  preload.js
src/managers/: LocManager.js  LogManager.js  UpdateManager.js
ui/: app.css  app.js  index.html
