[package]
name = "aura-update"
version = "2.2.8"
description = "Aura Update — Health Center"
authors = ["Aura Néo <contact@auraneo.fr>"]
license = "Proprietary"
edition = "2021"

[lib]
name = "aura_update_lib"
crate-type = ["lib", "cdylib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["fs", "process", "time", "net", "sync", "macros", "rt-multi-thread"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
sysinfo = "0.32"
chrono = { version = "0.4", features = ["serde"] }
local-ip-address = "0.6"
warp = "0.3"
qrcode = "0.14"
dirs = "5"
rand = "0.8"
rayon = "1.10"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
open = "5"
tauri-plugin-single-instance = "2"
tauri-plugin-autostart = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[profile.release]
opt-level = "s"
strip = true
lto = true
codegen-units = 1
panic = "abort"
